<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Schedule.ScheduleEditActivity">

    <RelativeLayout
        android:id="@+id/alarm_top_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/lyellow">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/alarm"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/darkgrey" />

        <ImageView
            android:id="@+id/alarm_edit_iv_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="20dp"
            android:src="@drawable/ic_baseline_check_24" />
    </RelativeLayout>
    <EditText
        android:id="@+id/alarm_et"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/et_content"
        android:gravity="top"
        android:hint="@string/hint_content_et"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alarm_tv_date"
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/darkgrey"
                android:textSize="18sp" />

            <Button
                android:id="@+id/alarm_btn_date"
               android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/date"
                android:textSize="16sp"
                android:textColor="@color/pblue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alarm_tv_time"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/darkgrey"
                android:textSize="18sp" />

            <Button
                android:id="@+id/alarm_btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp"
                android:background="@drawable/btn_bg"
                android:textColor="@color/pblue"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>