<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Note.NoteEditActivity">
    <RelativeLayout
        android:id="@+id/note_edit_top_layout"
        android:layout_width="match_parent"
        android:background="@color/bgblue"
        android:layout_height="55dp">
        <TextView
            android:text="@string/note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/darkgrey"/>
        <ImageView
            android:id="@+id/note_edit_iv_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_check_24"
            android:layout_alignParentEnd="true"
            android:paddingHorizontal="20dp"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/note_et_title"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="7dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/et_note_title"
        android:gravity="bottom"
        android:hint="@string/hint_title_et"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="370dp"
        android:layout_height="10dp"
        android:layout_gravity="center"
        android:background="@drawable/fgx" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/note_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/tag"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/note_et_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/note_et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/et_content"
        android:gravity="top"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>