<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/bjblue">
        <TextView
            android:text="@string/account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/darkgrey"/>


        <ImageView
            android:id="@+id/account_edit_iv_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:onClick="onClick"
            android:src="@drawable/ic_baseline_check_24" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/yuan_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:padding="10dp">
        <ImageView
            android:id="@+id/account_iv_type"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/o_qt_c"/>
        <TextView
            android:id="@+id/account_tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="其他"
            android:layout_toEndOf="@id/account_iv_type"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/account_et_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/account_tv_yuan"
            android:background="@color/white"
            android:gravity="right"
            android:inputType="number|numberDecimal"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/account_tv_yuan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:gravity="bottom"
            android:text="@string/yuan"
            android:textSize="16sp" />
    </RelativeLayout>

    <GridView
        android:id="@+id/account_gv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yuan_account"
        android:numColumns="4"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <EditText
        android:id="@+id/account_tv_rm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_gv"
        android:layout_alignParentStart="true"
        android:layout_marginVertical="4dp"
        android:background="@color/white"
        android:hint="@string/remark"
        android:padding="10dp" />

</LinearLayout>